Estilos base aplicados

--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         </div>
         <nav class="nav">
             <ul>
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Productos</a></li>
-                <li><a href="#">Comparativa</a></li> 
-                <li><a href="#">Contacto</a></li>
+                <li><a href="#inicio">Inicio</a></li>
+                <li><a href="#productos">Productos</a></li>
+                <li><a href="#comparativa">Comparativa</a></li> 
+                <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
     </header>
 
-    <section class="hero">
+    <section class="hero" id="inicio">
         <div class="hero-content">
             <h2>Vive sostenible, vive mejor</h2>
             <p>Productos ecológicos para un futuro más verde.</p>
@@ -39,7 +39,7 @@
     </section>
 
     <!-- ====== PRODUCTOS ====== -->
-    <section class="productos">
+    <section class="productos" id="productos">
         <h2>Nuestros Productos</h2>
         <div class="productos-container">
 
@@ -71,7 +71,7 @@
     </section>
 
     <!-- ====== TABLA COMPARATIVA ====== -->
-    <section class="comparativa">
+    <section class="comparativa" id="comparativa">
         <h2>Comparativa de Beneficios</h2>
         <table>
             <caption>Beneficios de nuestros productos</caption>
@@ -103,7 +103,7 @@
     </section>
 
     <!-- ====== FORMULARIO DE CONTACTO ====== -->
-    <section class="contacto">
+    <section class="contacto" id="contacto">
         <h2>Contáctanos</h2>
         <form>
             <label for="nombre">Nombre</label>
