--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
     <footer class="footer">
         <p>© 2025 EcoVida. Desarrollado por Paola Maravi Aguirre.</p>
         <div class="social">
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-twitter"></i>
+            <a href="#"><i class="fa-brands fa-facebook"></i>
+            <a href="#"><i class="fa-brands fa-instagram"></i>
+            <a href="#"><i class="fa-brands fa-twitter"></i>
         </div>
     </footer>
 
